0.4.15/_sources/gallery/set_theme.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/set_theme.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_set_theme.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_set_theme.py:


Set theme
=========

Displays an image and sets the theme to 'light'.

.. GENERATED FROM PYTHON SOURCE LINES 7-20



.. image-sg:: /gallery/images/sphx_glr_set_theme_001.png
   :alt: set theme
   :srcset: /gallery/images/sphx_glr_set_theme_001.png
   :class: sphx-glr-single-img





.. code-block:: default


    from skimage import data
    import napari


    # create the viewer with an image
    viewer = napari.view_image(data.astronaut(), rgb=True, name='astronaut')

    # set the theme to 'light'
    viewer.theme = 'light'

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_set_theme.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: set_theme.py <set_theme.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: set_theme.ipynb <set_theme.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
